work in progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ if (NOT CMAKE_VERSION VERSION_LESS "3.1")
     cmake_policy(SET CMP0054 NEW)
 endif()
 
-project(open3d_conan)
+# can't be changed because this name is used by Open3D to name
+# the CMake library target
+project(Open3D)
 
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
@@ -13,9 +15,10 @@ SET(EIGEN3_INCLUDE_DIRS "${CONAN_INCLUDE_DIRS_EIGEN}")
 SET(GLEW_INCLUDE_DIRS "${CONAN_INCLUDE_DIRS_GLEW}")
 SET(GLEW_LIBRARY_DIRS "${CONAN_LIB_DIRS_GLEW}")
 SET(GLEW_LIBRARIES "${CONAN_LIBS_GLEW}")
-SET(GLFW_LIBRARY_DIRS "${CONAN_LIB_DIRS_GLFW}")
-SET(GLFW_INCLUDE_DIRS "${CONAN_INCLUDE_DIRS_GLFW}")
-SET(GLFW_LIBRARIES "${CONAN_LIBS_GLFW}")
+SET(GLFW3_LIBRARY_DIRS "${CONAN_LIB_DIRS_GLFW}")
+SET(GLFW3_INCLUDE_DIRS "${CONAN_INCLUDE_DIRS_GLFW}")
+SET(GLFW3_LIBRARIES "${CONAN_LIBS_GLFW}")
+SET(GLFW3_FOUND TRUE)
 
 MESSAGE(STATUS "Eigen: ${EIGEN3_FOUND} inc: ${EIGEN3_INCLUDE_DIRS}")
 MESSAGE(STATUS "GLEW: ${GLEW_FOUND} inc: ${GLEW_INCLUDE_DIRS} lib: ${GLEW_LIBRARIES}")
